--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>ToDo List:</h1>
-    <div >
-        <h4>agregar item:</h4>
-        <button class="btn btn-success fw-bold" onclick="agregarItem()">+</button>
-        <input class="form-control w-25" type="text" id="task">
+    <div class="px-5" id="title">
+        <h1>ToDo List:</h1>
+        <label>Tarea</label>
+        <span class="d-flex" role="search">
+            <input class="form-control me-2 w-25" placeholder="Ingresa tu tarea acá" type="text" id="task">
+            <button class="btn btn-success fw-bold" onclick="agregarItem()">+</button>
+        </span>        
     </div>
-    <div class="list-group" id="lista"></div>
+    <div class="list-group my-5" id="lista"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
