--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <div class="px-5" id="title">
         <h1>ToDo List:</h1>
         <label>Tarea</label>
-        <span class="d-flex" role="search">
+        <span class="d-flex">
             <input class="form-control me-2 w-25" placeholder="Ingresa tu tarea acá" type="text" id="task">
-            <button class="btn btn-success fw-bold" onclick="agregarItem()">+</button>
-        </span>        
+            <button class="btn btn-primary fw-bold" onclick="agregarItem()">+</button>
+        </span>
+        <div class="cont">
+            <button class="mt-3 btn btn-success" onclick="mostrarTareaMasRapida()">Mostrar la area mas rapida</button>
+            <span id="tareaMasRapida" class="mx-3"></span>
+        </div>
     </div>
     <div class="list-group my-5" id="lista"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
